# Stack-DS

./: AUTHORS  ChangeLog  Makefile  Makefile.in  README  README.md  config.h  config.status  configure  configure.ac  df0.csv  stackds.py  swap.html
extensions/: extensions.txt
src/: Makefile  Makefile.am  Makefile.in  stackds.py  stackds.ui
